feat(T-090): Phase 1+2 — externalize configs + Dockerfile
Phase 1 — Externalize prod-config:
- application.properties: server.port=${PORT:8080}; datasource
  ${DB_URL:...}/${DB_USER:...}/${DB_PASSWORD:...} с dev-defaults
  из compose.yaml; app.cors.origins=${APP_CORS_ORIGINS:...}.
- application-prod.properties: spring.docker.compose.enabled=false,
  actuator сужен до health,prometheus (без info — не утекать
  build-метаданные).
- SecurityConfiguration: CORS origins из @Value(app.cors.origins),
  CSV split, allowedOriginPatterns.
- WebSocketConfig: setAllowedOriginPatterns из того же CSV
  вместо setAllowedOrigins("*") (совместимо с allowCredentials=true).
  @Suppress(SpreadOperator) — Spring API vararg-only.

Phase 2 — Dockerfile:
- Multi-stage: gradle:8.14.3-jdk21 build → eclipse-temurin:21-jre-alpine.
- Non-root user, BuildKit cache mount для ~/.gradle.
- JAVA_OPTS: MaxRAMPercentage=75.0 + UseZGC + ExitOnOutOfMemoryError
  под free-tier контейнеры 512MB.
- .dockerignore (build/, .idea/, docs/, .git/, .env*, ...).

Docs:
- docs/13-deploy.md — prod-runbook: Fly.io + Neon PG, secrets,
  smoke-test, откат.
- docs/10-configuration.md — расширены таблицы properties + env-vars.
- docs/11-known-gaps.md — CORS и actuator помечены устранёнными.
- docs/README.md — добавлен пункт 13-deploy.

./gradlew check — зелёный (44s). Осталось: локальный docker-run
smoke, хостинг (Phase 4, требует пользователя), frontend cutover
(Phase 5 уже заспецена в T-090).

Refs: docs/tasks/T-090-prod-deploy-readiness.md